--- a/src/CIAPI.AspNet.MarketGrid/CIAPI.AspNet.MarketGrid.csproj
+++ b/src/CIAPI.AspNet.MarketGrid/CIAPI.AspNet.MarketGrid.csproj
@@ -6,14 +6,15 @@
     <ProductVersion>
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{4FC000CB-D7D4-4CA6-BB58-A6350985578F}</ProjectGuid>
+    <ProjectGuid>{4058C6CC-4FB7-4262-84F6-F577AF581A01}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CIAPI.AspNet.MarketGrid</RootNamespace>
     <AssemblyName>CIAPI.AspNet.MarketGrid</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Nonshipping>true</Nonshipping>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -39,34 +40,28 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MarketGrid.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resources.cs" />
-    <Compile Include="ResourceUtil.cs" />
+    <Compile Include="WebResources.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Body.html" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="js\libs\CIAPI.js" />
-    <EmbeddedResource Include="js\libs\dd_belatedpng.js" />
-    <EmbeddedResource Include="js\libs\jquery-1.5.1.js" />
-    <EmbeddedResource Include="js\libs\jquery-1.5.1.min.js" />
-    <EmbeddedResource Include="js\libs\jquery-ui-1.8.11.custom\js\jquery-ui-1.8.11.custom.min.js" />
-    <EmbeddedResource Include="js\libs\jquery.sparkline.min.js" />
-    <EmbeddedResource Include="js\libs\jquery.tmpl.js" />
-    <EmbeddedResource Include="js\libs\json2.js" />
-    <EmbeddedResource Include="js\libs\knockout-1.2.0.debug.js" />
     <EmbeddedResource Include="js\libs\knockout-1.2.0.js" />
-    <EmbeddedResource Include="js\libs\knockout.mapping-latest.debug.js" />
     <EmbeddedResource Include="js\libs\knockout.mapping-latest.js" />
-    <EmbeddedResource Include="js\libs\modernizr-1.7.min.js" />
     <EmbeddedResource Include="js\marketGrid.js" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CIAPI.AspNet.Core\CIAPI.AspNet.Core.csproj">
+      <Project>{CC2AE9A0-8C3D-4C90-A86A-18004C5CC34C}</Project>
+      <Name>CIAPI.AspNet.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
