--- a/src/TestWebApplication/TestWebApplication.csproj
+++ b/src/TestWebApplication/TestWebApplication.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Default.aspx" />
+    <Content Include="StyleSheet1.css" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
