--- a/src/CIAPI.AspNet.MarketGrid/CIAPI.AspNet.MarketGrid.csproj
+++ b/src/CIAPI.AspNet.MarketGrid/CIAPI.AspNet.MarketGrid.csproj
@@ -15,6 +15,10 @@
     <FileAlignment>512</FileAlignment>
     <Nonshipping>true</Nonshipping>
     <TargetFrameworkProfile />
+    <SccProjectName>SAK</SccProjectName>
+    <SccLocalPath>SAK</SccLocalPath>
+    <SccAuxPath>SAK</SccAuxPath>
+    <SccProvider>SAK</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
