--- a/src/TestWebApplication/TestWebApplication.csproj
+++ b/src/TestWebApplication/TestWebApplication.csproj
@@ -55,6 +55,37 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="js\Super-Theme-Switcher\images\buttonbg.png" />
+    <Content Include="js\Super-Theme-Switcher\images\icon_color_arrow.gif" />
+    <Content Include="js\Super-Theme-Switcher\images\menuhoverbg.png" />
+    <Content Include="js\Super-Theme-Switcher\images\theme_90_black_matte.png" />
+    <Content Include="js\Super-Theme-Switcher\images\theme_90_black_tie.png" />
+    <Content Include="js\Super-Theme-Switcher\images\theme_90_blitzer.png" />
+    <Content Include="js\Super-Theme-Switcher\images\theme_90_cupertino.png" />
+    <Content Include="js\Super-Theme-Switcher\images\theme_90_dark_hive.png" />
+    <Content Include="js\Super-Theme-Switcher\images\theme_90_dot_luv.png" />
+    <Content Include="js\Super-Theme-Switcher\images\theme_90_eggplant.png" />
+    <Content Include="js\Super-Theme-Switcher\images\theme_90_excite_bike.png" />
+    <Content Include="js\Super-Theme-Switcher\images\theme_90_flick.png" />
+    <Content Include="js\Super-Theme-Switcher\images\theme_90_hot_sneaks.png" />
+    <Content Include="js\Super-Theme-Switcher\images\theme_90_humanity.png" />
+    <Content Include="js\Super-Theme-Switcher\images\theme_90_le_frog.png" />
+    <Content Include="js\Super-Theme-Switcher\images\theme_90_mint_choco.png" />
+    <Content Include="js\Super-Theme-Switcher\images\theme_90_overcast.png" />
+    <Content Include="js\Super-Theme-Switcher\images\theme_90_pepper_grinder.png" />
+    <Content Include="js\Super-Theme-Switcher\images\theme_90_smoothness.png" />
+    <Content Include="js\Super-Theme-Switcher\images\theme_90_south_street.png" />
+    <Content Include="js\Super-Theme-Switcher\images\theme_90_start_menu.png" />
+    <Content Include="js\Super-Theme-Switcher\images\theme_90_sunny.png" />
+    <Content Include="js\Super-Theme-Switcher\images\theme_90_swanky_purse.png" />
+    <Content Include="js\Super-Theme-Switcher\images\theme_90_trontastic.png" />
+    <Content Include="js\Super-Theme-Switcher\images\theme_90_ui_dark.png" />
+    <Content Include="js\Super-Theme-Switcher\images\theme_90_ui_light.png" />
+    <Content Include="js\Super-Theme-Switcher\images\theme_90_windoze.png" />
+    <Content Include="js\Super-Theme-Switcher\jquery.themeswitcher.js" />
+    <Content Include="js\Super-Theme-Switcher\jquery.themeswitcher.min.js" />
+    <Content Include="js\Super-Theme-Switcher\sample.htm" />
+    <Content Include="ProtectedPage.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="StyleSheet1.css" />
     <Content Include="Web.config" />
@@ -66,6 +97,13 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ProtectedPage.aspx.cs">
+      <DependentUpon>ProtectedPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ProtectedPage.aspx.designer.cs">
+      <DependentUpon>ProtectedPage.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -88,6 +126,12 @@
       <Project>{4058C6CC-4FB7-4262-84F6-F577AF581A01}</Project>
       <Name>CIAPI.AspNet.MarketGrid</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="jQueryUI.master" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="js\Super-Theme-Switcher\README.md" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
