Ensure CSS is injected into head element so Theme Switcher works

--- a/src/CIAPI.AspNet.Core/CIAPI.AspNet.Core.csproj
+++ b/src/CIAPI.AspNet.Core/CIAPI.AspNet.Core.csproj
@@ -42,6 +42,7 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="ControlInjectorCssRegistrar.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="ICssRegistrar.cs" />
     <Compile Include="IJavaScriptRegistrar.cs" />
