--- a/src/TestWebApplication/TestWebApplication.csproj
+++ b/src/TestWebApplication/TestWebApplication.csproj
@@ -85,9 +85,11 @@
     <Content Include="js\Super-Theme-Switcher\jquery.themeswitcher.js" />
     <Content Include="js\Super-Theme-Switcher\jquery.themeswitcher.min.js" />
     <Content Include="js\Super-Theme-Switcher\sample.htm" />
-    <Content Include="ProtectedPage.aspx" />
+    <Content Include="Logon.aspx" />
+    <Content Include="MyAccount.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="StyleSheet1.css" />
+    <Content Include="ThePlatform.aspx" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -97,12 +99,19 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ProtectedPage.aspx.cs">
-      <DependentUpon>ProtectedPage.aspx</DependentUpon>
+    <Compile Include="Logon.aspx.cs">
+      <DependentUpon>Logon.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="ProtectedPage.aspx.designer.cs">
-      <DependentUpon>ProtectedPage.aspx</DependentUpon>
+    <Compile Include="Logon.aspx.designer.cs">
+      <DependentUpon>Logon.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="MyAccount.aspx.cs">
+      <DependentUpon>MyAccount.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MyAccount.aspx.designer.cs">
+      <DependentUpon>MyAccount.aspx</DependentUpon>
     </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
@@ -112,6 +121,20 @@
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Site1.Master.cs">
+      <DependentUpon>Site1.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Site1.Master.designer.cs">
+      <DependentUpon>Site1.Master</DependentUpon>
+    </Compile>
+    <Compile Include="ThePlatform.aspx.cs">
+      <DependentUpon>ThePlatform.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ThePlatform.aspx.designer.cs">
+      <DependentUpon>ThePlatform.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CIAPI.AspNet.Authentication\CIAPI.AspNet.Authentication.csproj">
@@ -122,16 +145,18 @@
       <Project>{CC2AE9A0-8C3D-4C90-A86A-18004C5CC34C}</Project>
       <Name>CIAPI.AspNet.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\CIAPI.AspNet.LoginView\CIAPI.AspNet.LoginView.csproj">
+      <Project>{2B8F54FD-B0A8-4576-96B3-4464B5355BA9}</Project>
+      <Name>CIAPI.AspNet.LoginView</Name>
+    </ProjectReference>
     <ProjectReference Include="..\CIAPI.AspNet.MarketGrid\CIAPI.AspNet.MarketGrid.csproj">
       <Project>{4058C6CC-4FB7-4262-84F6-F577AF581A01}</Project>
       <Name>CIAPI.AspNet.MarketGrid</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="jQueryUI.master" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="js\Super-Theme-Switcher\README.md" />
+    <Content Include="Site1.Master" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
