--- a/src/CIAPI.AspNet.Authentication/CIAPI.AspNet.Authentication.csproj
+++ b/src/CIAPI.AspNet.Authentication/CIAPI.AspNet.Authentication.csproj
@@ -62,31 +62,18 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="css\ci.default\images\ui-bg_flat_30_cccccc_40x100.png" />
-    <EmbeddedResource Include="css\ci.default\images\ui-bg_flat_50_5c5c5c_40x100.png" />
-    <EmbeddedResource Include="css\ci.default\images\ui-bg_glass_40_ffc73d_1x400.png" />
-    <EmbeddedResource Include="css\ci.default\images\ui-bg_highlight-hard_20_0972a5_1x100.png" />
-    <EmbeddedResource Include="css\ci.default\images\ui-bg_highlight-soft_33_003147_1x100.png" />
-    <EmbeddedResource Include="css\ci.default\images\ui-bg_highlight-soft_35_222222_1x100.png" />
-    <EmbeddedResource Include="css\ci.default\images\ui-bg_highlight-soft_44_444444_1x100.png" />
-    <EmbeddedResource Include="css\ci.default\images\ui-bg_highlight-soft_80_eeeeee_1x100.png" />
-    <EmbeddedResource Include="css\ci.default\images\ui-bg_loop_25_000000_21x21.png" />
-    <EmbeddedResource Include="css\ci.default\images\ui-icons_222222_256x240.png" />
-    <EmbeddedResource Include="css\ci.default\images\ui-icons_4b8e0b_256x240.png" />
-    <EmbeddedResource Include="css\ci.default\images\ui-icons_a83300_256x240.png" />
-    <EmbeddedResource Include="css\ci.default\images\ui-icons_cccccc_256x240.png" />
-    <EmbeddedResource Include="css\ci.default\images\ui-icons_ffffff_256x240.png" />
     <EmbeddedResource Include="js\CIAPI.amplify.requests.mock.js" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="css\ci.default\ci.default.css" />
-    <EmbeddedResource Include="css\ci.default\style.css" />
     <EmbeddedResource Include="js\CIAPI.Authentication.debug.js" />
     <EmbeddedResource Include="js\CIAPI.Authentication.min.js" />
     <EmbeddedResource Include="js\libs\CIAPI.debug.js" />
     <EmbeddedResource Include="js\libs\CIAPI.min.js" />
     <EmbeddedResource Include="js\libs\CIAPI.widget.debug.js" />
     <EmbeddedResource Include="js\libs\CIAPI.widget.min.js" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="css\CIAPI.Authentication.min.css" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
