--- a/src/TestWebApplication/TestWebApplication.csproj
+++ b/src/TestWebApplication/TestWebApplication.csproj
@@ -55,36 +55,76 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="js\Super-Theme-Switcher\images\buttonbg.png" />
-    <Content Include="js\Super-Theme-Switcher\images\icon_color_arrow.gif" />
-    <Content Include="js\Super-Theme-Switcher\images\menuhoverbg.png" />
-    <Content Include="js\Super-Theme-Switcher\images\theme_90_black_matte.png" />
-    <Content Include="js\Super-Theme-Switcher\images\theme_90_black_tie.png" />
-    <Content Include="js\Super-Theme-Switcher\images\theme_90_blitzer.png" />
-    <Content Include="js\Super-Theme-Switcher\images\theme_90_cupertino.png" />
-    <Content Include="js\Super-Theme-Switcher\images\theme_90_dark_hive.png" />
-    <Content Include="js\Super-Theme-Switcher\images\theme_90_dot_luv.png" />
-    <Content Include="js\Super-Theme-Switcher\images\theme_90_eggplant.png" />
-    <Content Include="js\Super-Theme-Switcher\images\theme_90_excite_bike.png" />
-    <Content Include="js\Super-Theme-Switcher\images\theme_90_flick.png" />
-    <Content Include="js\Super-Theme-Switcher\images\theme_90_hot_sneaks.png" />
-    <Content Include="js\Super-Theme-Switcher\images\theme_90_humanity.png" />
-    <Content Include="js\Super-Theme-Switcher\images\theme_90_le_frog.png" />
-    <Content Include="js\Super-Theme-Switcher\images\theme_90_mint_choco.png" />
-    <Content Include="js\Super-Theme-Switcher\images\theme_90_overcast.png" />
-    <Content Include="js\Super-Theme-Switcher\images\theme_90_pepper_grinder.png" />
-    <Content Include="js\Super-Theme-Switcher\images\theme_90_smoothness.png" />
-    <Content Include="js\Super-Theme-Switcher\images\theme_90_south_street.png" />
-    <Content Include="js\Super-Theme-Switcher\images\theme_90_start_menu.png" />
-    <Content Include="js\Super-Theme-Switcher\images\theme_90_sunny.png" />
-    <Content Include="js\Super-Theme-Switcher\images\theme_90_swanky_purse.png" />
-    <Content Include="js\Super-Theme-Switcher\images\theme_90_trontastic.png" />
-    <Content Include="js\Super-Theme-Switcher\images\theme_90_ui_dark.png" />
-    <Content Include="js\Super-Theme-Switcher\images\theme_90_ui_light.png" />
-    <Content Include="js\Super-Theme-Switcher\images\theme_90_windoze.png" />
-    <Content Include="js\Super-Theme-Switcher\jquery.themeswitcher.js" />
-    <Content Include="js\Super-Theme-Switcher\jquery.themeswitcher.min.js" />
-    <Content Include="js\Super-Theme-Switcher\sample.htm" />
+    <Content Include="js\html5shim.js" />
+    <Content Include="js\jquery-ui\1.8.11\css\dark-hive\images\ui-bg_flat_30_cccccc_40x100.png" />
+    <Content Include="js\jquery-ui\1.8.11\css\dark-hive\images\ui-bg_flat_50_5c5c5c_40x100.png" />
+    <Content Include="js\jquery-ui\1.8.11\css\dark-hive\images\ui-bg_glass_40_ffc73d_1x400.png" />
+    <Content Include="js\jquery-ui\1.8.11\css\dark-hive\images\ui-bg_highlight-hard_20_0972a5_1x100.png" />
+    <Content Include="js\jquery-ui\1.8.11\css\dark-hive\images\ui-bg_highlight-soft_33_003147_1x100.png" />
+    <Content Include="js\jquery-ui\1.8.11\css\dark-hive\images\ui-bg_highlight-soft_35_222222_1x100.png" />
+    <Content Include="js\jquery-ui\1.8.11\css\dark-hive\images\ui-bg_highlight-soft_44_444444_1x100.png" />
+    <Content Include="js\jquery-ui\1.8.11\css\dark-hive\images\ui-bg_highlight-soft_80_eeeeee_1x100.png" />
+    <Content Include="js\jquery-ui\1.8.11\css\dark-hive\images\ui-bg_loop_25_000000_21x21.png" />
+    <Content Include="js\jquery-ui\1.8.11\css\dark-hive\images\ui-icons_222222_256x240.png" />
+    <Content Include="js\jquery-ui\1.8.11\css\dark-hive\images\ui-icons_4b8e0b_256x240.png" />
+    <Content Include="js\jquery-ui\1.8.11\css\dark-hive\images\ui-icons_a83300_256x240.png" />
+    <Content Include="js\jquery-ui\1.8.11\css\dark-hive\images\ui-icons_cccccc_256x240.png" />
+    <Content Include="js\jquery-ui\1.8.11\css\dark-hive\images\ui-icons_ffffff_256x240.png" />
+    <Content Include="js\jquery-ui\1.8.11\css\dark-hive\jquery-ui-1.8.11.custom.css" />
+    <Content Include="js\jquery-ui\1.8.11\index.html" />
+    <Content Include="js\jquery-ui\1.8.11\js\jquery-ui.min.js" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\images\buttonbg.png" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\images\icon_color_arrow.gif" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\images\menuhoverbg.png" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\images\theme_90_black_matte.png" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\images\theme_90_black_tie.png" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\images\theme_90_blitzer.png" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\images\theme_90_cityindex.png" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\images\theme_90_cupertino.png" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\images\theme_90_dark_hive.png" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\images\theme_90_dot_luv.png" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\images\theme_90_eggplant.png" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\images\theme_90_excite_bike.png" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\images\theme_90_flick.png" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\images\theme_90_hot_sneaks.png" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\images\theme_90_humanity.png" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\images\theme_90_le_frog.png" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\images\theme_90_mint_choco.png" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\images\theme_90_overcast.png" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\images\theme_90_pepper_grinder.png" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\images\theme_90_smoothness.png" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\images\theme_90_south_street.png" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\images\theme_90_start_menu.png" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\images\theme_90_sunny.png" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\images\theme_90_swanky_purse.png" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\images\theme_90_trontastic.png" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\images\theme_90_ui_dark.png" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\images\theme_90_ui_light.png" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\images\theme_90_windoze.png" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\jquery.themeswitcher.js" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\jquery.themeswitcher.min.js" />
+    <Content Include="js\jquery-ui\Super-Theme-Switcher\sample.htm" />
+    <Content Include="js\jquery.tmpl.min.js" />
+    <Content Include="js\jquery\1.5.1\jQuery.debug.js" />
+    <Content Include="js\json2.js" />
+    <Content Include="js\layouts\responsive\images\home_nav_middle.jpg" />
+    <Content Include="js\layouts\responsive\images\logo.png" />
+    <Content Include="js\layouts\responsive\images\nav-bg.png" />
+    <Content Include="js\layouts\responsive\responsive.layout.css" />
+    <Content Include="js\layouts\simple\simple_layout.css" />
+    <Content Include="js\modernizr-1.7.min.js" />
+    <Content Include="js\themes\ci.default\ci.default.css" />
+    <Content Include="js\themes\ci.default\images\ui-ciapi-bg_highlight.png" />
+    <Content Include="js\themes\ci.default\images\ui-ciapi-bg_highlight_active.png" />
+    <Content Include="js\themes\ci.default\images\ui-ciapi-bg_highlight_active_yellow.png" />
+    <Content Include="js\themes\ci.default\images\ui-ciapi-bg_highlight_hover.png" />
+    <Content Include="js\themes\ci.default\images\ui-ciapi-bg_highlight_hover_yellow.png" />
+    <Content Include="js\themes\ci.default\images\ui-ciapi-bg_highlight_yellow.png" />
+    <Content Include="js\themes\ci.default\images\ui-icons_222222_256x240.png" />
+    <Content Include="js\themes\ci.default\images\ui-icons_4b8e0b_256x240.png" />
+    <Content Include="js\themes\ci.default\images\ui-icons_a83300_256x240.png" />
+    <Content Include="js\themes\ci.default\images\ui-icons_cccccc_256x240.png" />
+    <Content Include="js\themes\ci.default\images\ui-icons_ffffff_256x240.png" />
     <Content Include="Logon.aspx" />
     <Content Include="MyAccount.aspx" />
     <Content Include="Default.aspx" />
@@ -121,12 +161,12 @@
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Site1.Master.cs">
-      <DependentUpon>Site1.Master</DependentUpon>
+    <Compile Include="ResponsiveLayout.Master.cs">
+      <DependentUpon>ResponsiveLayout.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Site1.Master.designer.cs">
-      <DependentUpon>Site1.Master</DependentUpon>
+    <Compile Include="ResponsiveLayout.Master.designer.cs">
+      <DependentUpon>ResponsiveLayout.Master</DependentUpon>
     </Compile>
     <Compile Include="ThePlatform.aspx.cs">
       <DependentUpon>ThePlatform.aspx</DependentUpon>
@@ -155,8 +195,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="js\Super-Theme-Switcher\README.md" />
-    <Content Include="Site1.Master" />
+    <Content Include="ResponsiveLayout.Master" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="js\jquery-ui\Super-Theme-Switcher\README.md" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
