--- a/src/TestWebApplication/Web.config
+++ b/src/TestWebApplication/Web.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0"?>
-
-<!--
-  For more information on how to configure your ASP.NET application, please visit
-  http://go.microsoft.com/fwlink/?LinkId=169433
-  -->
-
 <configuration>
+    <appSettings>
+      <add key="ServiceUri" value="https://ciapipreprod.cityindextest9.co.uk/TradingApi"/>
+      <!-- LIVE: https://ciapi.cityindex.com/TradingApi -->
+      <!-- PPE: https://ciapipreprod.cityindextest9.co.uk/TradingApi -->
+      <add key="UserMockData" value="True"/> <!-- True | False -->
+    </appSettings>
     <system.web>
         <compilation debug="true" targetFramework="4.0" />
     </system.web>
