--- a/src/CIAPI.AspNet.Controls/CIAPI.AspNet.Controls.csproj
+++ b/src/CIAPI.AspNet.Controls/CIAPI.AspNet.Controls.csproj
@@ -46,7 +46,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Authentication\Authentication.cs" />
-    <Compile Include="Authentication\AuthenticationStatus.cs" />
+    <Compile Include="Authentication\AuthenticationStatus.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Authentication\WebResources.cs" />
     <Compile Include="Core\AuthenticationStateChecker.cs" />
     <Compile Include="Core\ControlInjectorCssRegistrar.cs" />
@@ -64,7 +66,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Authentication\Body.html" />
+    <EmbeddedResource Include="Authentication\AuthenticationStatus.html" />
+    <EmbeddedResource Include="Authentication\AuthenticationWidget.html" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Authentication\js\CIAPI.amplify.requests.mock.js" />
@@ -89,9 +92,6 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Authentication\css\CIAPI.Authentication.min.css" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Authentication\AuthenticationStatus.html" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MarketGrid\js\libs\CIAPI.js" />
