Alpha of localization

--- a/src/CIAPI.AspNet.Controls/CIAPI.AspNet.Controls.csproj
+++ b/src/CIAPI.AspNet.Controls/CIAPI.AspNet.Controls.csproj
@@ -45,6 +45,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_GlobalResources\AuthenticationStatus.pl.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AuthenticationStatus.pl.resx</DependentUpon>
+    </Compile>
+    <Compile Include="App_GlobalResources\AuthenticationStatus1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AuthenticationStatus.resx</DependentUpon>
+    </Compile>
+    <Compile Include="App_GlobalResources\AuthenticationWidget.pl.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AuthenticationWidget.pl.resx</DependentUpon>
+    </Compile>
+    <Compile Include="App_GlobalResources\AuthenticationWidget.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AuthenticationWidget.resx</DependentUpon>
+    </Compile>
     <Compile Include="Authentication\Authentication.cs" />
     <Compile Include="Authentication\AuthenticationStatus.cs">
       <SubType>Code</SubType>
@@ -66,6 +86,22 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="App_GlobalResources\AuthenticationStatus.pl.resx">
+      <LastGenOutput>AuthenticationStatus.pl.Designer.cs</LastGenOutput>
+      <Generator>ResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Include="App_GlobalResources\AuthenticationStatus.resx">
+      <LastGenOutput>AuthenticationStatus1.Designer.cs</LastGenOutput>
+      <Generator>ResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Include="App_GlobalResources\AuthenticationWidget.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>AuthenticationWidget1.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="App_GlobalResources\AuthenticationWidget.pl.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>AuthenticationWidget.pl2.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Authentication\AuthenticationStatus.html" />
     <EmbeddedResource Include="Authentication\AuthenticationWidget.html" />
   </ItemGroup>
