--- a/src/TestWebApplication/Web.config
+++ b/src/TestWebApplication/Web.config
@@ -1,12 +1,16 @@
 ﻿<?xml version="1.0"?>
 <configuration>
     <appSettings>
-      <add key="ServiceUri" value="https://ciapipreprod.cityindextest9.co.uk/TradingApi"/>
+      <add key="ServiceUri" value="https://ciapi.cityindex.com/TradingApi"/>
       <!-- LIVE: https://ciapi.cityindex.com/TradingApi -->
       <!-- PPE: https://ciapipreprod.cityindextest9.co.uk/TradingApi -->
-      <add key="UserMockData" value="True"/> <!-- True | False -->
+      <add key="UserMockData" value="False"/> <!-- True | False -->
     </appSettings>
+    
     <system.web>
+        <!-- This demo supports en-GB and pl-PL -->
+        <globalization uiCulture="pl-PL" culture="pl-PL"/>
+      
         <compilation debug="true" targetFramework="4.0" />
     </system.web>
 
