--- a/src/TestWebApplication/Web.config
+++ b/src/TestWebApplication/Web.config
@@ -4,7 +4,7 @@
       <add key="ServiceUri" value="https://ciapi.cityindex.com/TradingApi"/>
       <!-- LIVE: https://ciapi.cityindex.com/TradingApi -->
       <!-- PPE: https://ciapipreprod.cityindextest9.co.uk/TradingApi -->
-      <add key="UserMockData" value="False"/> <!-- True | False -->
+      <add key="UserMockData" value="True"/> <!-- True | False -->
     </appSettings>
     
     <system.web>
