POST CIAPI.Connection data to server rather than send it in cookies.

--- a/src/TestWebApplication/Web.config
+++ b/src/TestWebApplication/Web.config
@@ -10,6 +10,12 @@
     <system.web>
         <!-- This demo supports en-GB and pl-PL -->
         <globalization uiCulture="en-GB" culture="en-GB"/>
+        
+        <!-- This is required for the Authentication control-->
+        <httpHandlers>
+          <add verb="POST" path="CIAPI.AspNet.Controls.Authentication/StoreConnectionInSession.ashx" type="CIAPI.AspNet.Controls.Authentication.StoreConnectionInSession, CIAPI.AspNet.Controls"/>
+        </httpHandlers>
+      
       
         <compilation debug="true" targetFramework="4.0" />
     </system.web>
