--- a/src/CIAPI.AspNet.Controls/CIAPI.AspNet.Controls.csproj
+++ b/src/CIAPI.AspNet.Controls/CIAPI.AspNet.Controls.csproj
@@ -37,6 +37,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel.Web" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
@@ -59,8 +61,10 @@
     <Compile Include="Authentication\AuthenticationStatus.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Authentication\StoreConnectionInSession.cs" />
     <Compile Include="Authentication\WebResources.cs" />
     <Compile Include="Core\AuthenticationStateChecker.cs" />
+    <Compile Include="Core\CIAPIConnection.cs" />
     <Compile Include="Core\ControlInjectorCssRegistrar.cs" />
     <Compile Include="Core\Extensions.cs" />
     <Compile Include="Core\ICssRegistrar.cs" />
