--- a/src/CIAPI.AspNet.Controls/CIAPI.AspNet.Controls.csproj
+++ b/src/CIAPI.AspNet.Controls/CIAPI.AspNet.Controls.csproj
@@ -130,6 +130,9 @@
   <ItemGroup>
     <EmbeddedResource Include="MarketGrid\Body.html" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Authentication\js\AuthenticationWidget.js" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
