--- a/src/TestWebApplication/Web.config
+++ b/src/TestWebApplication/Web.config
@@ -9,14 +9,13 @@
     
     <system.web>
         <!-- This demo supports en-GB and pl-PL -->
-        <globalization uiCulture="pl-PL" culture="pl-PL"/>
+        <globalization uiCulture="en-Gb" culture="en-GB"/>
         
         <!-- This is required for the Authentication control-->
         <httpHandlers>
           <add verb="POST" path="CIAPI.AspNet.Controls.Authentication/StoreConnectionInSession.ashx" type="CIAPI.AspNet.Controls.Authentication.StoreConnectionInSession, CIAPI.AspNet.Controls"/>
         </httpHandlers>
-      
-      
+     
         <compilation debug="true" targetFramework="4.0" />
     </system.web>
 
