--- a/src/TestWebApplication/Web.config
+++ b/src/TestWebApplication/Web.config
@@ -4,12 +4,13 @@
       <add key="ServiceUri" value="https://ciapipreprod.cityindextest9.co.uk/TradingApi"/>
       <!-- LIVE: https://ciapi.cityindex.com/TradingApi -->
       <!-- PPE: https://ciapipreprod.cityindextest9.co.uk/TradingApi -->
-      <add key="UserMockData" value="True"/> <!-- True | False -->
+      <add key="UserMockData" value="False"/> <!-- True | False -->
     </appSettings>
     
     <system.web>
         <!-- This demo supports en-GB and pl-PL -->
         <globalization uiCulture="en-Gb" culture="en-GB"/>
+<!--      <globalization uiCulture="pl-PL" culture="pl-PL"/>-->
         
         <!-- This is required for the Authentication control-->
         <httpHandlers>
